k8s/db_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    component: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14-alpine
          ports:
          - containerPort: 5432
          env: # Changes this for secrets later
            - name: POSTGRES_PASSWORD
              value: "your_password_here"
            - name: POSTGRES_USER
              value: "postgres"
            - name: POSTGRES_DB
              value: "mydatabase"
          volumeMounts: # Mount the data in this filesystem (like binding to the PVC)
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-volumes
          PersistentVolumeClaim:
            claimName: postgres-pvc # Name of my pvcClaim file
