k8s/flask_app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  labels:
    component: flask-app
spec:
  replicas: 2 # Running multiple instances for load balancing
  selector:
    matchLabels:
      component: flask-app
  template:
    metadata:
      labels:
        component: flask-app
    spec:
      nodeSelector:
        role: app # Schedule on nodes marked for app services
      containers:
        - name: flask-app
          image: joseriosve/flask_app_distributed:v2
          ports:
            - containerPort: 8000 # Flask application runs on port 8000
          envFrom: # Load environment variables from secrets
            - secretRef:
                name: secrets-flask-app
          command: # Gunicorn command to start Flask
            - "gunicorn"
            - "--workers"
            - "3"
            - "--bind"
            - "0.0.0.0:8000"
            - "app:create_app()"
          readinessProbe: # Ensures Flask is ready before traffic is sent
            httpGet:
              path: /health # Flask app should define a health check endpoint
              port: 8000 # The same port where the app runs
            initialDelaySeconds: 5 # Wait 5 seconds before first check
            periodSeconds: 10 # Check readiness every 10 seconds
