k8s/cluster-db-app.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-services
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    component: postgres
