k8s/cluster_flask_app.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: flask-app
  ports:
    - port: 80 # Expose port
      targetPort: 8000
