k8s/ingress_nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  namespace: default
spec:
  ingressClassName: nginx # required by new versions of k8s
  rules:
    - host: a080d3d28a30e48b0bc6ea2b2600b867-330984944.us-east-1.elb.amazonaws.com # external ip load balancer
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-app-cluster-ip-service
                port:
                  number: 80
